# xhs-mcp

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  smithery.yam  smithery.yaml
api/: xhs_api.py
xhs_mcp/: __init__.py  __main__.py
